--- a/app/(beforeLogin)/_components/loginModal.module.css
+++ b/app/(beforeLogin)/_components/loginModal.module.css
@@ -49,3 +49,72 @@
 .closeButton:hover {
   background-color: #d9d9d9;
 }
+
+/* 모달바디*/
+.modal form {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.modalBody {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.inputDiv {
+  display: flex;
+  width: 80%;
+  flex-direction: column;
+  position: relative;
+}
+
+.inputLabel {
+  width: 100%;
+  display: inline-block;
+  top: 0;
+  border-radius: 4px;
+  font-size: 20px;
+  padding: 8px 8px 0;
+}
+.inputLabel:focus-within {
+  color: red;
+}
+.input {
+  width: 100%;
+  /* border: none; */
+  border-radius: 50px;
+  font-size: 17px;
+  margin-top: 16px;
+  padding: 12px 8px 8px;
+}
+
+.message {
+  display: flex;
+  justify-content: center;
+  color: red;
+  height: 20px;
+  font-size: 20px;
+}
+.modalFooter {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.actionButton {
+  width: 80%;
+  height: 43px;
+  border-radius: 50px;
+  border: none;
+  color: black;
+  font-size: 17px;
+  background-color: #d9d9d9;
+}
+
+.actionButton:hover {
+  background-color: #888888;
+}
