--- a/app/(afterLogin)/home/_components/recommendPlaceButton.module.css
+++ b/app/(afterLogin)/home/_components/recommendPlaceButton.module.css
@@ -10,6 +10,7 @@
   font-size: 30px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
+  z-index: 200;
 }
 .recommandPlace:hover {
   background-color: #d9d9d9;
