--- a/app/(beforeLogin)/_components/signupForm.module.css
+++ b/app/(beforeLogin)/_components/signupForm.module.css
@@ -7,72 +7,16 @@
   justify-content: center;
 }
 
-.signupForm {
-  flex: 1;
-  width: 100%;
+.emailBox {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-
-.inputDiv {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 520px;
-}
-
-.inputEmailDiv {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
+  width: 500px;
   justify-content: space-between;
-}
-.inputEmail {
-  width: 300px;
-  border-radius: 50px;
-  font-size: 17px;
-  margin-top: 16px;
-  padding: 12px 8px 8px;
-}
-.duplicateButton {
-  width: 100px;
-  font-size: 17px;
-  border-radius: 50px;
-  margin-top: 16px;
-  height: 43px;
-}
-.input {
-  /* border: none; */
-  border-radius: 50px;
-  font-size: 17px;
-  margin-top: 16px;
-  padding: 12px 8px 8px;
-}
-.inputLabel {
-  width: 100%;
-  display: inline-block;
-  top: 0;
-  border-radius: 4px;
-  font-size: 20px;
-  padding: 8px 8px 0;
+  align-items: center;
 }
 .signupFooter {
   margin: 50px 0px;
   width: 100%;
   display: flex;
   justify-content: center;
-}
-.actionButton {
-  width: 520px;
-  height: 43px;
-  border-radius: 50px;
-  border: none;
-  color: black;
-  font-size: 17px;
-  background-color: #d9d9d9;
-}
-
-.actionButton:hover {
-  background-color: #888888;
 }
