--- a/app/_components/backButton.module.css
+++ b/app/_components/backButton.module.css
@@ -7,6 +7,6 @@
 }
 
 .backButton:hover {
-  background-color: #d9d9d9;
-  border-radius: 15px;
+  background-color: #c8e6c9;
+  border-radius: 20px;
 }
