--- a/app/(afterLogin)/home/bookmarks/bookmark.module.css
+++ b/app/(afterLogin)/home/bookmarks/bookmark.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100dvh;
-  /* background-color: aqua; */
+  background-color: white;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
 }
 
