--- a/app/(afterLogin)/home/layout.module.css
+++ b/app/(afterLogin)/home/layout.module.css
@@ -11,7 +11,7 @@
   height: 100dvh;
   position: fixed;
   z-index: 1;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .rightSection {
