--- a/app/(afterLogin)/home/_components/navbar.module.css
+++ b/app/(afterLogin)/home/_components/navbar.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6); /* 투명한 흰색 */
 }
 
 .header {
@@ -41,7 +41,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  /* background-color: white; */
 }
 .logoutButton {
   width: 270px;
