--- a/app/(afterLogin)/home/recommended/recommended.module.css
+++ b/app/(afterLogin)/home/recommended/recommended.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100dvh;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6); /* 투명한 흰색 */
   box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
 }
 
