--- a/app/_components/backButton.module.css
+++ b/app/_components/backButton.module.css
@@ -1,7 +1,7 @@
 .backButton {
   width: 50px;
   height: 50px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6); /* 투명한 흰색 */
   border: none;
   font-size: 30px;
 }
