--- a/app/(afterLogin)/home/recommended/[placeId]/reviews/review.module.css
+++ b/app/(afterLogin)/home/recommended/[placeId]/reviews/review.module.css
@@ -3,6 +3,8 @@
   height: 100dvh;
   background-color: rgba(255, 255, 255, 0.6); /* 투명한 흰색 */
   box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
@@ -32,4 +34,19 @@
   /* flex: 1; */
   width: 50px;
   height: 80px;
+}
+
+.reviewContainer {
+  overflow-y: auto; /* 세로 방향으로 스크롤 가능하게 설정 */
+  flex: 1;
+}
+
+.reviewForm {
+  display: flex;
+  flex-direction: column;
+}
+
+.ratingAndSubmit {
+  display: flex;
+  justify-content: space-evenly;
 }
