--- a/app/(afterLogin)/home/recommended/[placeId]/info/info.module.css
+++ b/app/(afterLogin)/home/recommended/[placeId]/info/info.module.css
@@ -1,7 +1,7 @@
 .modal {
   display: flex;
   position: fixed; /* 화면 전체에 고정 */
-  z-index: 1000;
+  /* z-index: 1000; */
   flex-direction: column;
   position: relative;
   background-color: #fff;
@@ -15,24 +15,6 @@
   width: 100%;
   height: 110;
   display: flex;
-  align-items: flex-start;
-}
-
-.closeButton {
-  top: 30px;
-  left: 30px;
-  width: 50px;
-  height: 50px;
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
-  background-color: #fff;
-  position: absolute;
-  display: flex;
   align-items: center;
-  justify-content: center;
-}
-
-.closeButton:hover {
-  background-color: #d9d9d9;
+  justify-content: space-between;
 }
