--- a/app/(afterLogin)/home/recommended/[placeId]/reviews/_components/review.module.css
+++ b/app/(afterLogin)/home/recommended/[placeId]/reviews/_components/review.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100px;
-  padding: 20px;
+  min-height: 100px;
+  padding: 10px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* 연한 회색 */
 }
 
@@ -11,9 +11,10 @@
 }
 
 .contentBox {
+  min-height: 50px;
 }
 
 .ratingBox {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
