--- a/app/_components/closeButton.module.css
+++ b/app/_components/closeButton.module.css
@@ -7,7 +7,7 @@
   border: none;
   cursor: pointer;
   background-color: #fff;
-  position: absolute;
+  /* position: absolute; */
   display: flex;
   align-items: center;
   justify-content: center;
