--- a/app/(afterLogin)/home/bookmarks/_components/bookmark.module.css
+++ b/app/(afterLogin)/home/bookmarks/_components/bookmark.module.css
@@ -1,3 +1,15 @@
 .box {
   width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: row;
+  padding: 30px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* 연한 회색 */
+}
+.placeTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: 30px;
 }
