--- a/app/(afterLogin)/home/bookmarks/_components/placeBookmarked.module.css
+++ b/app/(afterLogin)/home/bookmarks/_components/placeBookmarked.module.css
@@ -1,2 +1,12 @@
 .noBookmarkPlaces {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 25px;
+}
+.placeTitle {
+  display: flex;
+  flex-direction: row;
 }
