--- a/app/(afterLogin)/home/bookmarks/bookmark.module.css
+++ b/app/(afterLogin)/home/bookmarks/bookmark.module.css
@@ -33,3 +33,9 @@
   width: 50px;
   height: 80px;
 }
+
+.PlacesBookmarkedSection {
+  width: 100%;
+  height: 100%;
+  overflow: auto; /* 내용이 높이를 넘으면 스크롤이 나타남 */
+}
