--- a/app/(afterLogin)/home/bookmarks/_components/bookmark.module.css
+++ b/app/(afterLogin)/home/bookmarks/_components/bookmark.module.css
@@ -3,13 +3,32 @@
   height: 200px;
   display: flex;
   flex-direction: row;
-  padding: 30px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* 연한 회색 */
 }
-.placeTitle {
+.infoSection {
+  flex: 1;
+  padding: 30px;
+  font-size: 30px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 100%;
-  height: 30px;
+  flex-direction: column;
+}
+
+.btnBox {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.scoreSection {
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.chartBox {
+  width: 100px;
+  height: 100px;
 }
