--- a/app/(afterLogin)/home/_components/navbar.module.css
+++ b/app/(afterLogin)/home/_components/navbar.module.css
@@ -24,3 +24,11 @@
   justify-content: center;
   /* background-color: white; */
 }
+
+/* navbar.module.css */
+
+.container,
+.header,
+.footer {
+  font-family: "Pretendard-Regular", sans-serif;
+}
