--- a/app/(afterLogin)/home/recommended/[placeKey]/info/info.module.css
+++ b/app/(afterLogin)/home/recommended/[placeKey]/info/info.module.css
@@ -17,4 +17,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  overflow-y: auto;
+}
+.modalBody {
+  padding: 15px;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  align-items: center;
 }
